@@ -52,7 +52,7 @@
 
 */
 
-static char * version_str = "0.31 20090227";    /* spc4r18 */
+static char * version_str = "0.32 20090228";    /* spc4r18 + sbc3r18 */
 
 extern void svpd_enumerate_vendor(void);
 extern int svpd_decode_vendor(int sg_fd, int num_vpd, int subvalue,
@@ -1318,6 +1318,14 @@ decode_b0_vpd(unsigned char * buff, int len, int do_hex, int pdt)
                     buff[19];
                 printf("  Maximum prefetch, xdread, xdwrite transfer length: "
                        "%u blocks\n", u);
+            }
+            if (len > 27) {     /* added in sbc3r18 */
+                u = ((unsigned int)buff[20] << 24) | (buff[21] << 16) |
+                    (buff[22] << 8) | buff[23];
+                printf("  Maximum unmap LBA count: %u\n", u);
+                u = ((unsigned int)buff[24] << 24) | (buff[25] << 16) |
+                    (buff[26] << 8) | buff[27];
+                printf("  Maximum unmap block descriptor count: %u\n", u);
             }
             break;
         case 1: case 8:
